Add support for creating a directory for the output pdf
Creates the directory path needed for the output file. Application prints error if it could not create the path.

--- a/man/mdpdf.1
+++ b/man/mdpdf.1
@@ -9,6 +9,7 @@ mdpdf \- convert markdown to PDF
 .SH DESCRIPTION
 .B mdpdf
 converts markdown in SOURCE, or multiple SOURCE(s) to PDF in OUTPUT.
+Tries to creates the directory path to OUTPUT if it does not exist.
 .SH OPTIONS
 .TP
 .BR \-f ", " \-\-force
